@@ -58,7 +58,7 @@
 #include <scorep_profile_task_init.h>
 #include <scorep_ipc.h>
 #include <scorep_system_tree_sequence.h>
-#include <scorep_environment.h>
+#include <scorep_status.h>
 #include <scorep_runtime_management.h>
 #include <scorep_location_management.h>
 
@@ -970,7 +970,7 @@ add_mapping_to_cube_writing_data( scorep_cube_writing_data* writeSet )
 {
     /* Get local location map */
     const uint64_t* thread_map = NULL;
-    if ( SCOREP_Env_UseSystemTreeSequence() )
+    if ( SCOREP_Status_UseSystemTreeSequenceDefinitions() )
     {
         thread_map = scorep_system_tree_seq_get_local_location_order();
     }
@@ -1096,7 +1096,7 @@ scorep_profile_write_cube4( SCOREP_Profile_OutputFormat format )
     UTILS_DEBUG_PRINTF( SCOREP_DEBUG_PROFILE, "Prepare writing" );
 
     SCOREP_Ipc_Group* comm = SCOREP_IPC_GROUP_WORLD;
-    if ( SCOREP_Env_UseSystemTreeSequence() )
+    if ( SCOREP_Status_UseSystemTreeSequenceDefinitions() )
     {
         comm = scorep_system_tree_seq_get_ipc_group();
     }
@@ -1355,7 +1355,7 @@ scorep_profile_write_cube4( SCOREP_Profile_OutputFormat format )
     /* Clean up */
     UTILS_DEBUG_PRINTF( SCOREP_DEBUG_PROFILE, "Clean up" );
     delete_cube_writing_data( &write_set );
-    if ( SCOREP_Env_UseSystemTreeSequence() )
+    if ( SCOREP_Status_UseSystemTreeSequenceDefinitions() )
     {
         scorep_system_tree_seq_free_ipc_group( comm );
     }
