@@ -7,7 +7,7 @@
  * Copyright (c) 2009-2013,
  * Gesellschaft fuer numerische Simulation mbH Braunschweig, Germany
  *
- * Copyright (c) 2009-2013,
+ * Copyright (c) 2009-2013, 2022,
  * Technische Universitaet Dresden, Germany
  *
  * Copyright (c) 2009-2013,
@@ -48,6 +48,9 @@ SCOREP_Status_Initialize( void );
 
 void
 SCOREP_Status_Finalize( void );
+
+void
+SCOREP_Status_OnMeasurementEnd( void );
 
 bool
 SCOREP_IsTracingEnabled( void );
@@ -116,6 +119,22 @@ SCOREP_Status_IsMppFinalized( void );
  */
 bool
 SCOREP_Status_IsProcessMasterOnNode( void );
+
+
+/**
+ * Notify that ACC was in use.
+ *
+ * Prevents usage of system tree sequence definitions.
+ */
+void
+SCOREP_Status_OnAccUsage( void );
+
+
+/**
+ * Indicates whether the system tree sequence definitions should and can be used.
+ */
+bool
+SCOREP_Status_UseSystemTreeSequenceDefinitions( void );
 
 
 #endif /* SCOREP_STATUS_H */
